--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="techniques">
@@ -68,18 +68,18 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
       <section class="oakley">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="feynman">
@@ -206,18 +206,18 @@
         </ul>
         <div class="kaufman__triangle rotation"></div>
       </section>
-    </main>
 
-    <section class="resources">
-      <h2 class="section-title">Полезные ресурсы</h2>
-      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-      <div class="resources__logo-zone">
-        <a href="#" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип arzamas"></a>
-        <a href="#" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип n1"></a>
-        <a href="#" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип strelka"></a>
-        <a href="#" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo//resources-polka.svg" alt="Логотип Полка"></a>
-      </div>
-    </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a href="#" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип arzamas"></a>
+          <a href="#" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип n1"></a>
+          <a href="#" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип strelka"></a>
+          <a href="#" class="resources__link" target="_blank"><img class="resources__logo" src="./images/logo//resources-polka.svg" alt="Логотип Полка"></a>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer">
       <div class="footer__columns">
